# dear-imgui-rs

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  game_engine_docking.ini  release-plz.toml
backends/dear-imgui-ash/: CHANGELOG.md  Cargo.toml  README.md
backends/dear-imgui-ash/src/: error.rs  lib.rs  texture.rs
backends/dear-imgui-bevy/: Cargo.toml  README.md  imgui.ini
backends/dear-imgui-glow/: CHANGELOG.md  Cargo.toml  README.md
backends/dear-imgui-sdl3/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.cpp
backends/dear-imgui-wgpu/: CHANGELOG.md  Cargo.toml  README.md  REFACTOR_SUMMARY.md
backends/dear-imgui-winit/: CHANGELOG.md  Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: simple_string_test.rs  string_methods_comparison.rs
dear-app/: CHANGELOG.md  Cargo.toml  README.md
dear-app/src/: lib.rs
dear-imgui/: Cargo.toml
dear-imgui-sys/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  hack_msvc.cpp  imgui_msvc_wrapper.cpp  msvc_blocklist.txt  wrapper.cpp  wrapper.h
dear-imgui-sys/backend-shims/: android.cpp  dx11.cpp  opengl3.cpp  sdlgpu3.cpp  sdlrenderer3.cpp  win32.cpp
dear-imgui-sys/src/: android.rs  bindings_pregenerated.rs  bindings_reference.rs  dx11.rs  ffi.rs  imgui_test_engine_hooks.cpp  lib.rs  opengl3.rs  platform_io_hooks.cpp  raw_backend.rs  stack_layout_imgui_externs.cpp.inc  stack_layout_imgui_item_add.cpp.inc  stack_layout_imgui_item_size.cpp.inc  stack_layout_imgui_item_size_horizontal_compat.cpp.inc  stack_layout_shim.cpp  wasm_bindings_pregenerated.rs  win32.cpp  win32.rs  wrapper_functions.rs
dear-imgui/examples/: font_v192_features.rs
dear-imgui/src/: clipboard.rs  color.rs  colors.rs  columns.rs  context.rs  debug.rs  demo.rs  dock_builder.rs  dock_space.rs  drag_drop.rs  draw.rs  draw_data.rs  error.rs  fonts.rs  frame.rs  id.rs  input.rs  internal.rs  io.rs  layout.rs  lib.rs  list_clipper.rs  logging.rs  math.rs  navigation.rs  platform_io.rs  prelude.rs  stacks.rs  state_storage.rs  string.rs  style.rs  text_filter.rs  texture.rs  tokens.rs  types.rs  ui.rs  utils.rs  viewport_backend.rs  window.rs
dear-imgui/tests/: basic_widget_boundaries.rs  capture_and_nav.rs  checkbox_flags.rs  clipboard_and_ini.rs  color_option_flags.rs  color_widget_boundaries.rs  colors_packed.rs  combo_tab_popup_flags.rs  condition_values.rs  dock_api_boundaries.rs  drag_drop_payload.rs  draw_flags.rs  focus_scope.rs  frame_lifecycle.rs  hover_focus_flags.rs  image_widget_boundaries.rs  input_widgets.rs  io_flag_boundaries.rs  io_numeric_boundaries.rs  layout_scroll_boundaries.rs  log_and_popup.rs  misc_queries.rs  more_coverage.rs  owned_draw_data.rs  plot_widgets.rs  serde_flag_bits.rs  shortcut_routing.rs  slider_vectors.rs  snapshot_contract.rs  state_storage.rs  style_boundaries.rs  tab_and_color_options.rs  table_option_flags.rs  test_docking.rs  test_second_priority_widgets.rs  test_utils_and_columns.rs  thread_safety.rs  utility_numeric_boundaries.rs  window_child_flags.rs  window_focus.rs  (+1 more)
examples/: Cargo.toml  README.md  basic_test.rs  dockspace_minimal.rs  drag_drop_demo.rs  drag_widgets.rs  draw_demo.rs  game_engine_docking.ini  game_engine_docking.rs  glow_basic.rs  glow_textures.rs  hello_world.rs  hello_world_wgpu.rs  imgui_test_engine_basic.rs  imguizmo_basic.rs  imguizmo_quat_basic.rs  imnodeflow_basic.rs  imnodes_basic.rs  implot3d_basic.rs  implot_basic.rs  implot_basic_simple.rs  input_text_callback_demo.rs  multi_viewport_demo.rs  node_editor_basic.rs  node_editor_showcase.rs  reflect_demo.rs  simple_test.rs  test_msvc_abi_issue.rs  test_multi_viewport.rs  test_new_widgets.rs  test_viewport_callbacks.rs  text_filter_demo.rs  wgpu_basic.rs  widgets_demo.rs
examples-android/dear-imgui-android-smoke/: Cargo.toml  README.md
examples-ios/dear-imgui-ios-sdl3-smoke/: Cargo.toml  README.md
examples-ios/dear-imgui-ios-smoke/: .gitignore  Cargo.toml  README.md
examples-wasm/: Cargo.toml
examples-wasm/src/: lib.rs
examples-wasm/web/: index.html
examples/00-quickstart/: dear_app_quickstart.rs  drawlist_minimal.rs  glow_basic.rs  hello_world.rs  input_text_minimal.rs  list_clipper_log.rs  menus_and_popups.rs  style_and_fonts.rs  tables_minimal.rs  tables_property_grid.rs  wgpu_basic.rs
examples/01-renderers/: ash_basic.rs  ash_textures.rs  dear_app_wgpu_textures.rs  glow_external_context_regression.rs  glow_textures.rs  sdl3_sdlrenderer.rs  sdl3_wgpu.rs  wgpu_textures.rs
examples/02-docking/: dear_app_docking.rs  dockspace_minimal.rs  game_engine_docking.ini  game_engine_docking.rs  multi_viewport_ash.rs  multi_viewport_wgpu.rs  sdl3_ash_multi_viewport.rs  sdl3_glow_multi_viewport.rs  sdl3_opengl_multi_viewport.rs  sdl3_sdlgpu_multi_view.rs  sdl3_wgpu_multi_viewport.rs
examples/04-integration/: asset_browser_grid.rs  console_log.rs  file_browser_imgui.rs  file_dialog_native.rs  ime_debug.rs  multi_context_switch.rs  threaded_snapshot_minimal.rs  wgpu_rtt_gameview.rs
examples/advanced-controls/: Cargo.toml
examples/advanced-features-demo/: Cargo.toml
examples/color-image-plot-demo/: Cargo.toml
examples/complete-features-demo/: Cargo.toml
examples/controls-test/: Cargo.toml
examples/demo/: Cargo.toml
examples/demo-window/: Cargo.toml
examples/docking-demo/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/io-style-demo/: Cargo.toml
examples/support/: node_editor_blueprint.rs  runner.rs  wgpu_init.rs
examples/wgpu-winit-demo/: Cargo.toml  README.md  index.html
examples/widgets-demo/: Cargo.toml
extensions/dear-file-browser/: CHANGELOG.md  Cargo.toml  README.md
extensions/dear-imgui-reflect/: Cargo.toml  README.md
extensions/dear-imgui-reflect-derive/: Cargo.toml
extensions/dear-imgui-test-engine/: CHANGELOG.md  Cargo.toml  README.md
extensions/dear-imgui-test-engine-sys/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
extensions/dear-imguizmo-quat/: CHANGELOG.md  Cargo.toml  README.md
extensions/dear-imguizmo-quat-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
(+928 files in other folders)
