[workspace]
resolver = "2"
members = [
    "dear-imgui-sys",
    "dear-imgui",
    "backends/dear-imgui-winit",
    "backends/dear-imgui-wgpu",
    "backends/dear-imgui-glow",
    "extensions/dear-implot-sys",
    "extensions/dear-implot",
    "extensions/dear-imguizmo-sys",
    "extensions/dear-imguizmo",
    "extensions/dear-imnodes-sys",
    "extensions/dear-imnodes",
    "examples",
    "examples-wasm",
    "xtask",
    "tools/build-support",
]

exclude = [
    # keep empty
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/dear-imgui"
homepage = "https://github.com/Latias94/dear-imgui"
documentation = "https://docs.rs/dear-imgui"
categories = ["gui", "api-bindings"]
keywords = ["imgui", "ui", "graphics", "docking", "multiview"]

[workspace.dependencies]
# Core dependencies
bitflags = "2.9"
parking_lot = "0.12"
cfg-if = "1.0"

# Graphics and windowing
wgpu = "26.0"
winit = "0.30.12"

# Build dependencies
bindgen = "0.72"
cc = "1.2"
pkg-config = "0.3"
xshell = "0.2"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utility
mint = "0.5.6"
env_logger = "0.11"
pollster = "0.4"

# WASM dependencies
console_error_panic_hook = "0.1"
console_log = "1"
fern = "0.7"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
