[package]
name = "dear-app"
version = "0.3.0"
edition.workspace = true
description = "Convenient Dear ImGui application runner for dear-imgui-rs (Winit + WGPU)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
# Use crates.io versions for publishing compatibility
dear-imgui-rs = { version = "0.3" }
dear-imgui-winit = { version = "0.3" }
dear-imgui-wgpu = { version = "0.3" }

# Align with crates.io dear-imgui-wgpu 0.3 (wgpu v26)
wgpu = "26"
winit.workspace = true
pollster.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Optional add-ons
# Temporarily removed for publish (no crates.io release yet)
# dear-implot = { version = "0.3", optional = true }
# dear-imnodes = { version = "0.3", optional = true }
# dear-implot3d = { version = "0.3", optional = true }

[features]
default = []
# Placeholder features for future add-ons (no deps wired for crates.io publish)
implot = []
imnodes = []
implot3d = []
