[package]
name = "dear-app"
version = "0.10.1"
edition.workspace = true
description = "Convenient Dear ImGui application runner for dear-imgui-rs (Winit + WGPU, docking, themes, add-ons)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
dear-imgui-rs = { path = "../dear-imgui", version = "0.10" }
dear-imgui-winit = { path = "../backends/dear-imgui-winit", version = "0.10" }
dear-imgui-wgpu = { path = "../backends/dear-imgui-wgpu", version = "0.10" }
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Optional add-ons
dear-implot = { path = "../extensions/dear-implot", version = "0.10", optional = true }
dear-imnodes = { path = "../extensions/dear-imnodes", version = "0.10", optional = true }
dear-implot3d = { path = "../extensions/dear-implot3d", version = "0.10", optional = true }

[features]
default = []
implot = ["dep:dear-implot"]
imnodes = ["dep:dear-imnodes"]
implot3d = ["dep:dear-implot3d"]
