[package]
name = "dear-imgui-sys"
version = "0.8.0"
edition.workspace = true
description = "Low-level FFI bindings to Dear ImGui v1.92.5 (docking branch) via cimgui (C API)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui-sys"
categories.workspace = true
keywords.workspace = true
build = "build.rs"
links = "dear-imgui"

# Exclude unnecessary files to reduce package size
exclude = [
    # Exclude heavy upstream folders from cimgui/imgui submodule
    "third-party/cimgui/imgui/.github/**",
    "third-party/cimgui/imgui/backends/**",
    "third-party/cimgui/imgui/docs/**", 
    "third-party/cimgui/imgui/examples/**",
    "third-party/cimgui/imgui/misc/cpp/**",
    "third-party/cimgui/imgui/misc/debuggers/**",
    "third-party/cimgui/imgui/misc/fonts/**",
    "third-party/cimgui/imgui/misc/single_file/**",
    # cimgui helper/test/generator content not needed for building
    "third-party/cimgui/.github/**",
    "third-party/cimgui/backend_test/**",
    "third-party/cimgui/generator/**",
    "third-party/cimgui/test/**",
]

# docs.rs configuration for offline builds
[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mint.workspace = true
cfg-if.workspace = true
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
build-support = { package = "dear-imgui-build-support", version = "0.2", path = "../tools/build-support", optional = true }
glam = { workspace = true, optional = true }

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
pkg-config = { workspace = true, optional = true }
xshell = { workspace = true }
cmake = "0.1"
build-support = { package = "dear-imgui-build-support", version = "0.2", path = "../tools/build-support" }

[[bin]]
name = "package"
path = "bin/package/main.rs"
required-features = ["package-bin"]

[features]
default = []
# Docking is always enabled; feature removed.
# Enable multi-viewport support (commented out while WIP)
# multi-viewport = []
# Enable freetype font rasterizer
freetype = ["pkg-config"]
# Enable for WASM targets
wasm = []
package-bin = ["dep:flate2", "dep:tar", "dep:build-support"]
prebuilt = ["build-support/download"]
build-from-source = []
glam = ["dep:glam"]
