[package]
name = "dear-imgui"
version = "0.2.0"
edition.workspace = true
description = "High-level Rust bindings to Dear ImGui with docking support"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui"
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
features = ["freetype"]

[dependencies]
bitflags.workspace = true
dear-imgui-sys = { path = "../dear-imgui-sys", version = "0.2" }
mint.workspace = true
parking_lot.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["tracing"]
# Docking is always enabled; feature removed.
# Enable multi-viewport support (define feature to satisfy cfg checks; opt-in)
multi-viewport = []
# Enable tracing support for better debugging
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Enable freetype font rasterizer
freetype = ["dear-imgui-sys/freetype"]
# Enable for WASM targets
wasm = ["dear-imgui-sys/wasm"]

[dev-dependencies]
approx = "0.5"
pretty_assertions = "1.4"
static_assertions = "1.1"
once_cell = "1.19"
