[package]
name = "dear-imgui-rs"
version = "0.6.0"
edition.workspace = true
description = "High-level Rust bindings to Dear ImGui v1.92.5 with docking support"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui-rs"
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
features = ["freetype"]

[dependencies]
bitflags.workspace = true
dear-imgui-sys = { path = "../dear-imgui-sys", version = "0.6" }
mint.workspace = true
parking_lot.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
glam = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["tracing"]
# Docking is always enabled; feature removed.
# Enable multi-viewport support (define feature to satisfy cfg checks; opt-in)
multi-viewport = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Enable freetype font rasterizer
freetype = ["dear-imgui-sys/freetype"]
serde = ["dep:serde"]
# Enable for WASM targets (import-style provider)
wasm = ["dear-imgui-sys/wasm"]
# Experimental: enable direct font atlas access on wasm. Requires the shared
# memory provider (imgui-sys-v0) built via xtask; API and behaviour may change.
wasm-font-atlas-experimental = []
# Optional math interop: enable glam support in the sys crate so draw/list APIs
# taking Into<sys::ImVec2>/ImVec4 can accept glam vectors directly.
glam = ["dep:glam", "dear-imgui-sys/glam"]

[dev-dependencies]
approx = "0.5"
pretty_assertions = "1.4"
static_assertions = "1.1"
once_cell = "1.19"
