[package]
name = "dear-imgui-web-demo"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
# Enable both backends so wgpu decides at runtime (webgl2 or webgpu)
default = ["web-backends"]
web-backends = ["wgpu/webgl", "wgpu/webgpu", "dear-imgui-wgpu/webgl", "dear-imgui-wgpu/webgpu"]
experimental-fonts = [
    "dear-imgui-rs/wasm-font-atlas-experimental",
    "dear-imgui-wgpu/wasm-font-atlas-experimental",
]
implot = ["dep:dear-implot"]
implot3d = ["dep:dear-implot3d"]
imnodes = ["dep:dear-imnodes"]
imguizmo = ["dep:dear-imguizmo"]
imguizmo-quat = ["dep:dear-imguizmo-quat"]

[dependencies]
dear-imgui-rs = { path = "../dear-imgui", version = "0.8", features = ["wasm"] }
dear-imgui-winit = { path = "../backends/dear-imgui-winit", version = "0.8" }
dear-imgui-wgpu = { path = "../backends/dear-imgui-wgpu", version = "0.8" }
dear-implot = { path = "../extensions/dear-implot", version = "0.8", optional = true, features = ["wasm"] }
dear-implot3d = { path = "../extensions/dear-implot3d", version = "0.8", optional = true, features = ["wasm"] }
dear-imnodes = { path = "../extensions/dear-imnodes", version = "0.8", optional = true, features = ["wasm"] }
dear-imguizmo = { path = "../extensions/dear-imguizmo", version = "0.8", optional = true, features = ["wasm"] }
dear-imguizmo-quat = { path = "../extensions/dear-imguizmo-quat", version = "0.8", optional = true, features = ["wasm"] }
wgpu = { workspace = true }
winit = { workspace = true }
web-time = { workspace = true }

# wasm/web runtime helpers
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pollster = { workspace = true }
