[package]
name = "dear-imgui-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
# Extension features - use simple names to avoid conflicts
implot = ["dep:dear-implot", "dear-app/implot"]
imguizmo = ["dep:dear-imguizmo"]
imnodes = ["dep:dear-imnodes", "dear-app/imnodes"]
imguizmo-quat = ["dep:dear-imguizmo-quat"]
implot3d = ["dep:dear-implot3d", "dear-app/implot3d"]
freetype = ["dear-imgui-rs/freetype"]
file-browser = ["dep:dear-file-browser"]
multi-viewport = ["dear-imgui-rs/multi-viewport", "dear-imgui-winit/multi-viewport", "dear-imgui-wgpu/multi-viewport"]

[[bin]]
name = "wgpu_basic"
path = "00-quickstart/wgpu_basic.rs"

[[bin]]
name = "hello_world"
path = "00-quickstart/hello_world.rs"

[[bin]]
name = "game_engine_docking"
path = "02-docking/game_engine_docking.rs"

[[bin]]
name = "glow_basic"
path = "00-quickstart/glow_basic.rs"

[[bin]]
name = "input_text_minimal"
path = "00-quickstart/input_text_minimal.rs"

[[bin]]
name = "tables_minimal"
path = "00-quickstart/tables_minimal.rs"

[[bin]]
name = "drawlist_minimal"
path = "00-quickstart/drawlist_minimal.rs"

[[bin]]
name = "menus_and_popups"
path = "00-quickstart/menus_and_popups.rs"

[[bin]]
name = "tables_property_grid"
path = "00-quickstart/tables_property_grid.rs"

[[bin]]
name = "list_clipper_log"
path = "00-quickstart/list_clipper_log.rs"

[[bin]]
name = "style_and_fonts"
path = "00-quickstart/style_and_fonts.rs"

[[bin]]
name = "glow_textures"
path = "01-renderers/glow_textures.rs"

[[bin]]
name = "dockspace_minimal"
path = "02-docking/dockspace_minimal.rs"

[[bin]]
name = "multi_viewport_wgpu"
path = "02-docking/multi_viewport_wgpu.rs"
required-features = ["multi-viewport"]

[[bin]]
name = "wgpu_textures"
path = "01-renderers/wgpu_textures.rs"

[[bin]]
name = "dear_app_wgpu_textures"
path = "01-renderers/dear_app_wgpu_textures.rs"

[[bin]]
name = "implot_basic"
path = "implot_basic.rs"
required-features = ["implot"]

[[bin]]
name = "implot3d_basic"
path = "implot3d_basic.rs"
required-features = ["implot3d"]

[[bin]]
name = "imguizmo_basic"
path = "imguizmo_basic.rs"
required-features = ["imguizmo"]

[[bin]]
name = "imnodes_basic"
path = "imnodes_basic.rs"
required-features = ["imnodes"]

[[bin]]
name = "imguizmo_quat_basic"
path = "imguizmo_quat_basic.rs"
required-features = ["imguizmo-quat"]


[[bin]]
name = "wgpu_rtt_gameview"
path = "04-integration/wgpu_rtt_gameview.rs"

[[bin]]
name = "console_log"
path = "04-integration/console_log.rs"

[[bin]]
name = "asset_browser_grid"
path = "04-integration/asset_browser_grid.rs"

[[bin]]
name = "file_dialog_native"
path = "04-integration/file_dialog_native.rs"
required-features = ["file-browser"]

[[bin]]
name = "file_browser_imgui"
path = "04-integration/file_browser_imgui.rs"
required-features = ["file-browser"]

[[bin]]
name = "dear_app_docking"
path = "02-docking/dear_app_docking.rs"

[[bin]]
name = "dear_app_quickstart"
path = "00-quickstart/dear_app_quickstart.rs"

[dependencies]
dear-imgui-rs = { path = "../dear-imgui", version = "0.6" }
dear-imgui-winit = { path = "../backends/dear-imgui-winit", version = "0.6" }
dear-imgui-wgpu = { path = "../backends/dear-imgui-wgpu", version = "0.6" }
dear-imgui-glow = { path = "../backends/dear-imgui-glow", version = "0.6" }
dear-app = { path = "../dear-app", version = "0.6" }
arboard = "3"
dear-implot = { path = "../extensions/dear-implot", optional = true }
dear-imguizmo = { path = "../extensions/dear-imguizmo", optional = true }
dear-imnodes = { path = "../extensions/dear-imnodes", optional = true }
dear-imguizmo-quat = { path = "../extensions/dear-imguizmo-quat", optional = true }
dear-implot3d = { path = "../extensions/dear-implot3d", optional = true }
dear-file-browser = { path = "../extensions/dear-file-browser", optional = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger = { workspace = true }
pollster = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
raw-window-handle = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
once_cell = "1"
