[package]
name = "dear-imgui-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
# Extension features - use simple names to avoid conflicts
implot = ["dep:dear-implot", "dear-app/implot"]
imguizmo = ["dep:dear-imguizmo"]
imnodes = ["dep:dear-imnodes", "dear-app/imnodes"]
imguizmo-quat = ["dep:dear-imguizmo-quat"]
implot3d = ["dep:dear-implot3d", "dear-app/implot3d"]
freetype = ["dear-imgui-rs/freetype"]
file-browser = ["dep:dear-file-browser"]
reflect = ["dep:dear-imgui-reflect", "dear-imgui-reflect/glam"]
multi-viewport = [
    "dear-imgui-rs/multi-viewport",
    "dear-imgui-winit/multi-viewport",
    "dear-imgui-wgpu/multi-viewport-winit",
    "dear-imgui-ash/multi-viewport-winit",
    "dear-imgui-sdl3?/multi-viewport",
    "dear-imgui-glow/multi-viewport",
]

# Enable WGPU multi-viewport when using the SDL3 platform backend (native only).
# This is separate from `multi-viewport` because the wgpu crate cannot enable both
# winit and SDL3 multi-viewport routes simultaneously.
sdl3-wgpu-multi-viewport = [
    "sdl3-platform",
    "dear-imgui-rs/multi-viewport",
    "dear-imgui-sdl3/multi-viewport",
    "dear-imgui-wgpu/multi-viewport-sdl3",
]

# Enable Ash multi-viewport when using the SDL3 platform backend (native only).
sdl3-ash-multi-viewport = [
    "sdl3-platform",
    "dear-imgui-rs/multi-viewport",
    "dear-imgui-sdl3/multi-viewport",
    "dear-imgui-ash/multi-viewport-sdl3",
]
### SDL3 platform (window + events)
###
### This feature gates SDL3-related dependencies so that examples which do not
### use SDL3 (e.g. `game_engine_docking`) do not pay the cost of building SDL3
### or its C dependencies (CMake, SDKs, etc.).
sdl3-platform = [
    "dep:sdl3",
    "dep:dear-imgui-sdl3",
]

# Legacy alias kept for older commands.
sdl3-backends = ["sdl3-platform"]

# SDL3 + official OpenGL3 renderer backend.
sdl3-opengl3 = [
    "sdl3-platform",
    "dear-imgui-sdl3/opengl3-renderer",
]

[[bin]]
name = "wgpu_basic"
path = "00-quickstart/wgpu_basic.rs"

[[bin]]
name = "hello_world"
path = "00-quickstart/hello_world.rs"

[[bin]]
name = "game_engine_docking"
path = "02-docking/game_engine_docking.rs"

[[bin]]
name = "glow_basic"
path = "00-quickstart/glow_basic.rs"

[[bin]]
name = "input_text_minimal"
path = "00-quickstart/input_text_minimal.rs"

[[bin]]
name = "tables_minimal"
path = "00-quickstart/tables_minimal.rs"

[[bin]]
name = "drawlist_minimal"
path = "00-quickstart/drawlist_minimal.rs"

[[bin]]
name = "menus_and_popups"
path = "00-quickstart/menus_and_popups.rs"

[[bin]]
name = "tables_property_grid"
path = "00-quickstart/tables_property_grid.rs"

[[bin]]
name = "list_clipper_log"
path = "00-quickstart/list_clipper_log.rs"

[[bin]]
name = "style_and_fonts"
path = "00-quickstart/style_and_fonts.rs"

[[bin]]
name = "glow_textures"
path = "01-renderers/glow_textures.rs"

[[bin]]
name = "dockspace_minimal"
path = "02-docking/dockspace_minimal.rs"

[[bin]]
name = "multi_viewport_wgpu"
path = "02-docking/multi_viewport_wgpu.rs"
required-features = ["multi-viewport"]

[[bin]]
name = "multi_viewport_ash"
path = "02-docking/multi_viewport_ash.rs"
required-features = ["multi-viewport"]

[[bin]]
name = "sdl3_opengl_multi_viewport"
path = "02-docking/sdl3_opengl_multi_viewport.rs"
required-features = ["multi-viewport", "sdl3-opengl3"]

[[bin]]
name = "sdl3_glow_multi_viewport"
path = "02-docking/sdl3_glow_multi_viewport.rs"
required-features = ["multi-viewport", "sdl3-platform"]

[[bin]]
name = "sdl3_wgpu"
path = "01-renderers/sdl3_wgpu.rs"
required-features = ["sdl3-platform"]

[[bin]]
name = "sdl3_wgpu_multi_viewport"
path = "02-docking/sdl3_wgpu_multi_viewport.rs"
required-features = ["sdl3-wgpu-multi-viewport"]

[[bin]]
name = "sdl3_ash_multi_viewport"
path = "02-docking/sdl3_ash_multi_viewport.rs"
required-features = ["sdl3-ash-multi-viewport"]

[[bin]]
name = "wgpu_textures"
path = "01-renderers/wgpu_textures.rs"

[[bin]]
name = "dear_app_wgpu_textures"
path = "01-renderers/dear_app_wgpu_textures.rs"

[[bin]]
name = "ash_basic"
path = "01-renderers/ash_basic.rs"

[[bin]]
name = "ash_textures"
path = "01-renderers/ash_textures.rs"

[[bin]]
name = "implot_basic"
path = "implot_basic.rs"
required-features = ["implot"]

[[bin]]
name = "implot3d_basic"
path = "implot3d_basic.rs"
required-features = ["implot3d"]

[[bin]]
name = "imguizmo_basic"
path = "imguizmo_basic.rs"
required-features = ["imguizmo"]

[[bin]]
name = "imnodes_basic"
path = "imnodes_basic.rs"
required-features = ["imnodes"]

[[bin]]
name = "imguizmo_quat_basic"
path = "imguizmo_quat_basic.rs"
required-features = ["imguizmo-quat"]


[[bin]]
name = "wgpu_rtt_gameview"
path = "04-integration/wgpu_rtt_gameview.rs"

[[bin]]
name = "console_log"
path = "04-integration/console_log.rs"

[[bin]]
name = "asset_browser_grid"
path = "04-integration/asset_browser_grid.rs"

[[bin]]
name = "file_dialog_native"
path = "04-integration/file_dialog_native.rs"
required-features = ["file-browser"]

[[bin]]
name = "file_browser_imgui"
path = "04-integration/file_browser_imgui.rs"
required-features = ["file-browser"]

[[bin]]
name = "ime_debug"
path = "04-integration/ime_debug.rs"

[[bin]]
name = "dear_app_docking"
path = "02-docking/dear_app_docking.rs"

[[bin]]
name = "dear_app_quickstart"
path = "00-quickstart/dear_app_quickstart.rs"

[[bin]]
name = "reflect_demo"
path = "reflect_demo.rs"
required-features = ["reflect"]

[dependencies]
dear-imgui-rs = { path = "../dear-imgui", version = "0.8" }
dear-imgui-winit = { path = "../backends/dear-imgui-winit", version = "0.8" }
dear-imgui-wgpu = { path = "../backends/dear-imgui-wgpu", version = "0.8" }
dear-imgui-glow = { path = "../backends/dear-imgui-glow", version = "0.8" }
dear-imgui-sdl3 = { path = "../backends/dear-imgui-sdl3", version = "0.8", optional = true }
dear-imgui-ash = { path = "../backends/dear-imgui-ash", version = "0.8" }
dear-app = { path = "../dear-app", version = "0.8" }
arboard = "3"
dear-implot = { path = "../extensions/dear-implot", optional = true }
dear-imguizmo = { path = "../extensions/dear-imguizmo", optional = true }
dear-imnodes = { path = "../extensions/dear-imnodes", optional = true }
dear-imguizmo-quat = { path = "../extensions/dear-imguizmo-quat", optional = true }
dear-implot3d = { path = "../extensions/dear-implot3d", optional = true }
dear-file-browser = { path = "../extensions/dear-file-browser", optional = true }
dear-imgui-reflect = { path = "../extensions/dear-imgui-reflect", optional = true, features = ["glam"] }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger = { workspace = true }
pollster = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
raw-window-handle = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
once_cell = "1"
ash = { version = "0.38", default-features = false, features = ["debug", "std"] }
ash-window = "0.13"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
# On Linux/Windows, prefer building SDL3 from source so CI and users don't
# need a pre-installed system SDL3. This uses sdl3-sys + CMake internally.
sdl3 = { version = "0.17", features = ["raw-window-handle", "build-from-source", "ash"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# On macOS, rely on a system SDL3 install (e.g. `brew install sdl3`) instead of
# building from source to avoid CMake permission/toolchain issues on user
# machines. The `raw-window-handle` feature is still required for WGPU.
sdl3 = { version = "0.17", features = ["raw-window-handle", "ash"], optional = true }
